build: align feature/1.0.x with JDK 8 baseline
- revision: 1.0.x.20260630-SNAPSHOT
- java.version: 1.8 (no <release> tag, source/target instead)
- playwright: 1.46.0, commons-pool2: 2.12.0, commons-io: 2.16.1
- spring-framework: 5.3.39 (JDK 8 compatible)
- junit-jupiter: 5.10.2, mockito: 4.11.0 (JDK 8 compatible)
- transmittable-thread-local: 2.14.3

Test code adaptations for JDK 8:
- isBlank() -> trim().isEmpty()
- var -> explicit types
- List.of() / Map.of() -> Collections.emptyList() / emptyMap()
- Path.of() -> Paths.get()
- Constructor.canAccess() -> Modifier.isPublic()