@@ -20,10 +20,10 @@ class BrowserConnectOptionsTest {
     @Test
     void shouldSupportChainedSetters() {
         BrowserConnectOptions opts = new BrowserConnectOptions()
-                .setHeaders(Map.of("Authorization", "Bearer token"))
+                .setHeaders(java.util.Collections.singletonMap("Authorization", "Bearer token"))
                 .setSlowMo(100.0)
                 .setTimeout(5000.0);
-        assertEquals(Map.of("Authorization", "Bearer token"), opts.getHeaders());
+        assertEquals(java.util.Collections.singletonMap("Authorization", "Bearer token"), opts.getHeaders());
         assertEquals(100.0, opts.getSlowMo());
         assertEquals(5000.0, opts.getTimeout());
     }
@@ -31,7 +31,7 @@ class BrowserConnectOptionsTest {
     @Test
     void shouldMapToConnectOptionsWithAllFields() {
         BrowserConnectOptions opts = new BrowserConnectOptions()
-                .setHeaders(Map.of("X-Custom", "val"))
+                .setHeaders(java.util.Collections.singletonMap("X-Custom", "val"))
                 .setSlowMo(50.0)
                 .setTimeout(10000.0);
         BrowserType.ConnectOptions result = opts.toOptions();
